--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+DesafioControleFluxo/src/ParametrosInvalidosException.java
+.gitignore
+DesafioControleFluxo/.vscode/settings.json
+.gitignore
+DesafioControleFluxo/.vscode/settings.json
+.gitignore
+DesafioControleFluxo/src/ParametrosInvalidosException.java
+DesafioControleFluxo/README.md
+.gitignore
+DesafioControleFluxo/src/Contador.java
+.gitignore
